--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,12 @@ dist/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Office files
+*.pdf
+*.xls
+*.xlsx
+*.doc
+*.docx
+*.odt
+*.ods
